# imu-software

./: README.md
lr_imu/: CMakeLists.txt  package.xml
lr_imu/include/lr_imu/: imu.h
lr_imu/launch/: calib.xml  lr_imu.rviz  lr_imu.xml
lr_imu/src/: calib.cpp  driver.cpp  imu.cpp
